Refactor build workflow to use Docker for Pebble SDK

--- a/.github/workflows/build-pebble.yml
+++ b/.github/workflows/build-pebble.yml
@@ -14,26 +14,14 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v3
 
-    - name: Install Pebble SDK dependencies
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y python2 python2-dev python-is-python2 cmake git curl libfreetype6-dev libpng-dev
-
-    - name: Install arm-gcc toolchain
-      run: |
-        wget https://developer.arm.com/-/media/Files/downloads/gnu-rm/4_9-2015q3/gnueabi/gcc-arm-none-eabi-4_9-2015q3-20150921-linux.tar.bz2
-        tar -xf gcc-arm-none-eabi-4_9-2015q3-20150921-linux.tar.bz2
-        echo "$PWD/gcc-arm-none-eabi-4_9-2015q3/bin" >> $GITHUB_PATH
-
-    - name: Install Pebble SDK 4.7 (classic)
-      run: |
-        curl -LO https://github.com/pebble-dev/pebble-tool/releases/download/v4.7.0/pebble-sdk-4.7-linux64.tar.bz2
-        tar -xf pebble-sdk-4.7-linux64.tar.bz2
-        echo "$PWD/pebble-sdk-4.7-linux64/bin" >> $GITHUB_PATH
-    
-    - name: Build PBW
-      run: |
-        pebble build
+    - name: Build PBW inside Pebble SDK container
+      uses: addnab/docker-run-action@v3
+      with:
+        image: pebbledev/pebble-sdk:latest
+        options: -v ${{ github.workspace }}:/work
+        run: |
+          cd /work
+          pebble build
 
     - name: Upload PBW artifact
       uses: actions/upload-artifact@v3
