--- a/.github/workflows/build-pebble.yml
+++ b/.github/workflows/build-pebble.yml
@@ -2,9 +2,9 @@ name: Build Pebble App
 
 on:
   push:
-    branches: [ "main", "master" ]
+    branches: ["**"]
   pull_request:
-    branches: [ "main", "master" ]
+    branches: ["**"]
 
 jobs:
   build:
